scrollbar bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 	margin: 0;
 }
 
-body {
+html, body {
 	min-height: 100vh;
 	width: 100%;
+	max-width: 100%;
 	overflow-x: hidden;
 }
 
